<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textStyle="italic" />

    <ScrollView
        android:id="@+id/srv_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/sw_blueTooth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bluetooth"
                android:textOff="@string/bluetoothOff"
                android:textOn="@string/bluetoothOn"/>

            <Button
                android:id="@+id/btn_showDevices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showDevices"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_showPairDevice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Paired Device"/>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_messageShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/srv_setting"
        android:hint="type message"/>

    <Button
        android:id="@+id/btn_messageSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tv_messageShow"
        android:layout_below="@+id/srv_setting"
        android:text="Send"/>

    <Button
        android:id="@+id/btn_serviceStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_messageSend"
        android:text="@string/Finish"/>

</RelativeLayout>
